@@ -466,3 +466,6 @@ Change list for PernMangband
 18/12/2001 (Jir)
 - Bugfixes on traps.
 - Bugfix: Immobile monsters beneath 5000'
+
+18/12/2001 (Evileye)
+- More bugfixes on traps which were causing memory corruption
